Fix whitespace noobery

--- a/zeus-frontend/app/containers/SearchView/style.css
+++ b/zeus-frontend/app/containers/SearchView/style.css
@@ -9,13 +9,3 @@
 .myPicker {
   width: 500px;
 }
-
-/*.main {
-  width: 80%;
-}*/
-
-/*.right {
-  width: 20%;
-  padding: 10px;
-  align-self: flex-start;
-}*/
